struggling with the final step of docs, cant seem to get the redoc to populate in docker
